--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_clojure_java_shell">clojure.java.shell</a></li>
 <li><a href="#_java_lang_processbuilder">java.lang.Process(Builder)</a>
 <ul class="sectlevel3">
-<li><a href="#_real_life_examples">Real life examples</a></li>
+<li><a href="#_real_world_examples">Real world examples</a></li>
 </ul>
 </li>
 </ul>
@@ -938,7 +938,7 @@ standard I/O to be the same as those of the current Java process.</td>
 </div>
 </div>
 <div class="sect3">
-<h4 id="_real_life_examples">Real life examples</h4>
+<h4 id="_real_world_examples">Real world examples</h4>
 <div class="ulist">
 <ul>
 <li>
