--- a/index.html
+++ b/index.html
@@ -781,7 +781,8 @@ output on stdout and the <code>:exit</code> code is <code>1</code>.</p>
 <p>Creating a child process with <code>clojure.java.shell/sh</code> is convenient and
 sufficient in 90% of the scripts you&#8217;re going to write with babashka. For the
 remaining 10% you&#8217;re going to need something slightly more powerful. This is
-where <code>babashka.process</code> comes in.</p>
+where the <code>babashka.process</code> library namespace comes in. The README and source
+code of this library is located <a href="https://github.com/babashka/process">here</a></p>
 </div>
 <div class="paragraph">
 <p>What if we wanted to start a Clojure pREPL in our script, send commands to it
