--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@ output on stdout and the <code>:exit</code> code is <code>1</code>.</p>
 sufficient in 90% of the scripts you&#8217;re going to write with babashka. For the
 remaining 10% you&#8217;re going to need something slightly more powerful. This is
 where the <code>babashka.process</code> library namespace comes in. The README and source
-code of this library is located <a href="https://github.com/babashka/process">here</a></p>
+code of this library is located <a href="https://github.com/babashka/process">here</a>.</p>
 </div>
 <div class="paragraph">
 <p>What if we wanted to start a Clojure pREPL in our script, send commands to it
