--- a/index.html
+++ b/index.html
@@ -943,13 +943,11 @@ to it.</td>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="shell">---
-$ bb src/process/prepl_2.clj
+<pre class="CodeRay highlight"><code data-lang="shell">$ bb src/process/prepl_2.clj
 Type an expression to evaluate:
 (+ 1 2 3)
 (+ 1 2 3) evaluates to 6
-:repl/quit
----</code></pre>
+:repl/quit</code></pre>
 </div>
 </div>
 <div class="sect3">
