--- a/index.html
+++ b/index.html
@@ -554,6 +554,11 @@ table.CodeRay td.code{padding:0 0 0 .75em}
 <li><a href="#_running_babashka">Running babashka</a></li>
 </ul>
 </li>
+<li><a href="#features">Features</a>
+<ul class="sectlevel2">
+<li><a href="#_built_in_namespaces">Built-in namespaces</a></li>
+</ul>
+</li>
 <li><a href="#child_processes">Child processes</a>
 <ul class="sectlevel2">
 <li><a href="#_clojure_java_shell">clojure.java.shell</a></li>
@@ -649,6 +654,9 @@ Clojure!</p>
 <div class="sect1">
 <h2 id="getting_started">Getting started</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>by Michiel Borkent</p>
+</div>
 <div class="sect2">
 <h3 id="_installation">Installation</h3>
 <div class="paragraph">
@@ -737,8 +745,199 @@ expression directly:</p>
 </div>
 </div>
 <div class="sect1">
+<h2 id="features">Features</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Typing <code>bb --help</code> from the command line will print all the available command
+line options which should give you a sense of the available features in
+babashka.</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="shellsession">Babashka v0.2.3
+
+Options must appear in the order of groups mentioned below.
+
+Help:
+
+  --help, -h or -?    Print this help text.
+  --version           Print the current version of babashka.
+  --describe          Print an EDN map with information about this version of babashka.
+
+In- and output flags:
+
+  -i                  Bind *input* to a lazy seq of lines from stdin.
+  -I                  Bind *input* to a lazy seq of EDN values from stdin.
+  -o                  Write lines to stdout.
+  -O                  Write EDN values to stdout.
+  --stream            Stream over lines or EDN values from stdin. Combined with -i or -I *input* becomes a single value per iteration.
+
+Uberscript:
+
+  --uberscript &lt;file&gt; Collect preloads, -e, -f and -m and all required namespaces from the classpath into a single executable file.
+
+Evaluation:
+
+  -e, --eval &lt;expr&gt;   Evaluate an expression.
+  -f, --file &lt;path&gt;   Evaluate a file.
+  -cp, --classpath    Classpath to use.
+  -m, --main &lt;ns&gt;     Call the -main function from namespace with args.
+  --verbose           Print debug information and entire stacktrace in case of exception.
+
+REPL:
+
+  --repl              Start REPL. Use rlwrap for history.
+  --socket-repl       Start socket REPL. Specify port (e.g. 1666) or host and port separated by colon (e.g. 127.0.0.1:1666).
+  --nrepl-server      Start nREPL server. Specify port (e.g. 1667) or host and port separated by colon (e.g. 127.0.0.1:1667).
+
+If neither -e, -f, or --socket-repl are specified, then the first argument that is not parsed as a option is treated as a file if it exists, or as an expression otherwise. Everything after that is bound to *command-line-args*. Use -- to separate script command line args from bb command line args.</code></pre>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_built_in_namespaces">Built-in namespaces</h3>
+<div class="paragraph">
+<p>In addition to <code>clojure.core</code>, the following namespaces are available in babashka.
+Some are available through pre-defined aliases in the <code>user</code> namespace,
+which can be handy for one-liners. If not all vars are available, they
+are enumerated explicitly. If some important var is missing, an issue or
+PR is welcome.</p>
+</div>
+<div class="paragraph">
+<p>From Clojure:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>clojure.core</code></p>
+</li>
+<li>
+<p><code>clojure.core.protocols</code>: <code>Datafiable</code>, <code>Navigable</code></p>
+</li>
+<li>
+<p><code>clojure.data</code></p>
+</li>
+<li>
+<p><code>clojure.datafy</code></p>
+</li>
+<li>
+<p><code>clojure.edn</code> aliased as <code>edn</code></p>
+</li>
+<li>
+<p><code>clojure.java.browse</code></p>
+</li>
+<li>
+<p><code>clojure.java.io</code> aliased as <code>io</code>:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><code>as-relative-path</code>, <code>as-url</code>, <code>copy</code>, <code>delete-file</code>, <code>file</code>,
+<code>input-stream</code>, <code>make-parents</code>, <code>output-stream</code>, <code>reader</code>, <code>resource</code>,
+<code>writer</code></p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p><code>clojure.java.shell</code> aliased as <code>shell</code></p>
+</li>
+<li>
+<p><code>clojure.main</code>: <code>demunge</code>, <code>repl</code>, <code>repl-requires</code></p>
+</li>
+<li>
+<p><code>clojure.pprint</code>: <code>pprint</code>, <code>cl-format</code></p>
+</li>
+<li>
+<p><code>clojure.set</code> aliased as <code>set</code></p>
+</li>
+<li>
+<p><code>clojure.string</code> aliased as <code>str</code></p>
+</li>
+<li>
+<p><code>clojure.stacktrace</code></p>
+</li>
+<li>
+<p><code>clojure.test</code></p>
+</li>
+<li>
+<p><code>clojure.zip</code></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Additional libraries:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/borkdude/babashka.curl"><code>babashka.curl</code></a></p>
+</li>
+<li>
+<p><a href="https://github.com/babashka/process"><code>babashka/process</code></a></p>
+</li>
+<li>
+<p><a href="https://github.com/nrepl/bencode"><code>bencode.core</code></a> aliased as <code>bencode</code>:
+<code>read-bencode</code>, <code>write-bencode</code></p>
+</li>
+<li>
+<p><a href="https://github.com/dakrone/cheshire"><code>cheshire.core</code></a> aliased as <code>json</code></p>
+</li>
+<li>
+<p><a href="https://clojure.github.io/core.async/"><code>clojure.core.async</code></a> aliased as
+<code>async</code>. Also see <a href="https://github.com/borkdude/babashka#coreasync">docs</a>.</p>
+</li>
+<li>
+<p><a href="https://github.com/clojure/data.csv"><code>clojure.data.csv</code></a> aliased as
+<code>csv</code></p>
+</li>
+<li>
+<p><a href="https://github.com/clojure/data.xml"><code>clojure.data.xml</code></a> aliased as
+<code>xml</code></p>
+</li>
+<li>
+<p><a href="https://github.com/clojure/tools.cli"><code>clojure.tools.cli</code></a> aliased as
+<code>tools.cli</code></p>
+</li>
+<li>
+<p><a href="https://github.com/clj-commons/clj-yaml"><code>clj-yaml.core</code></a> alias as
+<code>yaml</code></p>
+</li>
+<li>
+<p><a href="https://github.com/cognitect/transit-clj"><code>cognitect.transit</code></a> aliased
+as <code>transit</code></p>
+</li>
+<li>
+<p><a href="https://github.com/http-kit/http-kit"><code>org.httpkit.client</code></a></p>
+</li>
+<li>
+<p><a href="https://github.com/http-kit/http-kit"><code>org.httpkit.server</code></a></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>See the
+<a href="https://github.com/borkdude/babashka/blob/master/doc/projects.md">projects</a>
+page for libraries that are not built-in, but which you can load from
+source via the <code>--classpath</code> option.</p>
+</div>
+<div class="paragraph">
+<p>See the
+<a href="https://github.com/borkdude/babashka/blob/master/doc/build.md">build</a>
+page for built-in libraries that can be enabled via feature flags, if
+you want to compile babashka yourself.</p>
+</div>
+<div class="paragraph">
+<p>A selection of Java classes are available, see
+<code>babashka/impl/classes.clj</code> in babashka&#8217;s git repo.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="child_processes">Child processes</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>by Michiel Borkent</p>
+</div>
 <div class="paragraph">
 <p>There are several ways of creating child processes in babashka. Let&#8217;s start with
 the easiest one.</p>
@@ -972,7 +1171,7 @@ compute a classpath using tools.deps</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-06-28 23:05:52 +0200
+Last updated 2020-11-28 15:15:31 +0100
 </div>
 </div>
 </body>
