--- a/index.html
+++ b/index.html
@@ -557,14 +557,7 @@ table.CodeRay td.code{padding:0 0 0 .75em}
 <li><a href="#usage">Usage</a>
 <ul class="sectlevel2">
 <li><a href="#_running_a_script">Running a script</a></li>
-<li><a href="#_input_and_output_flags">Input and output flags</a>
-<ul class="sectlevel3">
-<li><a href="#_scripts">Scripts</a></li>
-<li><a href="#_edn_input">EDN input</a></li>
-<li><a href="#_text_input">Text input</a></li>
-<li><a href="#_output">Output</a></li>
-</ul>
-</li>
+<li><a href="#_input_and_output_flags">Input and output flags</a></li>
 <li><a href="#_current_file_path">Current file path</a></li>
 <li><a href="#_command_line_arguments">Command-line arguments</a></li>
 </ul>
@@ -577,25 +570,13 @@ table.CodeRay td.code{padding:0 0 0 .75em}
 <li><a href="#_features">Features</a>
 <ul class="sectlevel2">
 <li><a href="#_built_in_namespaces">Built-in namespaces</a></li>
-<li><a href="#_babashka_namespaces">Babashka namespaces</a>
-<ul class="sectlevel3">
-<li><a href="#babashkaclasspath">babashka.classpath</a></li>
-<li><a href="#babashkawait">babashka.wait</a></li>
-<li><a href="#babashkasignal">babashka.signal</a></li>
-<li><a href="#babashkacurl">babashka.curl</a></li>
-<li><a href="#babashkaprocess">babashka.process</a></li>
-</ul>
-</li>
+<li><a href="#_babashka_namespaces">Babashka namespaces</a></li>
 </ul>
 </li>
 <li><a href="#child_processes">Child processes</a>
 <ul class="sectlevel2">
 <li><a href="#_clojure_java_shell">clojure.java.shell</a></li>
-<li><a href="#_babashka_process">babashka.process</a>
-<ul class="sectlevel3">
-<li><a href="#_real_world_examples">Real world examples</a></li>
-</ul>
-</li>
+<li><a href="#_babashka_process">babashka.process</a></li>
 </ul>
 </li>
 </ul>
@@ -1616,7 +1597,7 @@ compute a classpath using tools.deps</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-11-28 17:10:07 +0100
+Last updated 2020-11-28 17:51:40 +0100
 </div>
 </div>
 </body>
